[package]
name = "jaffi"
version = "0.1.0"
edition = "2021"

author = "benjaminfry@me.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["jaffi_support", "integration_tests"]

[dependencies]
cafebabe = { version = "0.5.0", git = "https://github.com/staktrace/cafebabe.git", branch = "main" }
enum-as-inner = "0.5"
heck = "0.4.0"
jaffi_support = { version = "0.1.0", path = "./jaffi_support" }
proc-macro2 = "1.0.40"
quote = "1.0.20"
thiserror = "1.0.20"
typed-builder = "0.10.0"
